# deltaneutral

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
config/: config.example.yaml
scripts/: download_data.py  run_backtest.py
src/tradingbot/: __init__.py  cli.py
src/tradingbot/backtesting/: engine.py  simulator.py
src/tradingbot/config/: __init__.py  settings.py
src/tradingbot/core/: engine.py  portfolio.py  risk.py
src/tradingbot/data/: feed.py  loader.py  storage.py
src/tradingbot/exchanges/: __init__.py  base.py  connector.py  factory.py
src/tradingbot/execution/: executor.py  reconciliation.py
src/tradingbot/strategy/: base.py  delta_neutral.py  scanner.py
src/tradingbot/utils/: helpers.py  logger.py  metrics.py
tests/: conftest.py  test_backtesting.py  test_data.py  test_execution.py  test_reconciliation.py  test_risk.py  test_scanner.py  test_strategy.py
